ingress/service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: go-server-service
#   namespace: ingress-nginx
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 80
#       targetPort: 80
#     - port: 443
#       targetPort: 443
#   selector:
#     app: nginx-ingress

apiVersion: v1
kind: Service
metadata:
  name: go-server-service
spec:
  selector:
    app: nginx-ingress
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
  type: LoadBalancer
